2020-11-11  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, rebaseline test262's config.yaml

        test262 bot is using Catalina, it should use Big Sur. filed in [1].

        [1]: https://bugs.webkit.org/show_bug.cgi?id=218844

        * test262/config.yaml:
        * test262/expectations.yaml:

2020-11-11  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, fix wrong tests at the final clean up
        https://bugs.webkit.org/show_bug.cgi?id=213822

        * stress/intl-datetimeformat-formatrange.js:
        * stress/intl-datetimeformat-formatrangetoparts-relevant-extensions-ja.js:
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt1.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt2.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt3.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt4.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt5.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.vm.icuVersion): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt6.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt7.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt8.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt9.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt10.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt11.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt12.formatRangeToParts): Deleted.
        (Intl.DateTimeFormat.formatRangeToParts.compareParts.fmt13.formatRangeToParts): Deleted.