@@ -33,10 +33,6 @@ skip:
 
     # remove once it's no longer in test262
     - String.prototype.item
-
-    # test262 bot is using Catalina's ICU 64, upgrading to Big Sur is required
-    # https://bugs.webkit.org/show_bug.cgi?id=218844
-    - test/intl402/DateTimeFormat/prototype/formatRangeToParts
   paths:
     - test/built-ins/DataView/prototype/getBigInt64
     - test/built-ins/DataView/prototype/getBigUint64
@@ -98,6 +94,10 @@ skip:
     - test/built-ins/Atomics/sub/bigint
     - test/built-ins/Atomics/wait/bigint
     - test/built-ins/Atomics/xor/bigint
+
+    # test262 bot is using Catalina's ICU 64, upgrading to Big Sur is required
+    # https://bugs.webkit.org/show_bug.cgi?id=218844
+    - test/intl402/DateTimeFormat/prototype/formatRangeToParts
   files:
     # https://bugs.webkit.org/show_bug.cgi?id=190800
     - test/built-ins/Object/seal/seal-bigint64array.js
